--- a/Euler_exercises.tex
+++ b/Euler_exercises.tex
@@ -2,6 +2,13 @@
 \label{sec:Euler_exercises}
 
 \begin{enumerate}
+	
+\item \label{ex:2D_dens_for_u} Consider
+a 2D velocity field $(y,x)$. Sketch it, or plot it and
+guess how the streamlines should look. Next, find
+a density field that satisfies $\bfu \cdot \nabla \rho = 0$
+(other than the trivial, constant, solution)
+	
 \item \label{ex:vector_identity} Prove that
 \[
 \bfu \times ( \nabla\times \bfq) =
@@ -22,7 +29,7 @@ Hint: the curl of a field is associated with a tensor with elements:
 \]
 In the latter, $\epsilon$ is a rank-three tensor, the totally
 antisymmetric tensor (also known as the Levi-Civita symbol).  If this
-seems mistifying, all that it is expressing is that e.g.  $
+seems mystifying, all that it is expressing is that e.g.  $
 (\nabla\times\bfq)_z= \partial q_x /\partial y - \partial q_y
 /\partial x$, et c\ae tera.
 
