--- a/continuity.tex
+++ b/continuity.tex
@@ -7,13 +7,15 @@ a mathematical sense. By this me mean, we can pieces of any material
 as small as we want. 
 
 
+
+
 \section{The continuity equation}
 \label{sec:continuity}
 
 Let us consider a particle that is cubic in shape, with one of their
-corners at the origin and the three incident adges aligned with the
+corners at the origin and the three incident edges aligned with the
 Cartesian coordinates. This choice is completely general, given our
-freedom in defining a particle (as long as we make it ininitesimally
+freedom in defining a particle (as long as we make it infinitesimally
 small at the end), and in origin and axes for coordinates.
 
 There may be a mass influx though the left face of the particle due
