--- a/vorticity.tex
+++ b/vorticity.tex
@@ -54,7 +54,7 @@ Hence,
 \]
 The first term is always zero, since the vorticity is divergence-free
 (it being the curl of a field). The second is if the flow is
-incompressible. In this case,
+``incompressible'' (in the sense of divergence-free). In this case,
 \begin{equation}
   \label{eq:conv_accel_as_vort}
   \nabla \times (\bfu \times \vort ) =
