more on flow past cylinder, plus numerous errata

--- a/creeping.tex
+++ b/creeping.tex
@@ -420,7 +420,7 @@ exploring $f(r) \sim r^a$.
 \begin{figure}
   \centering
   \includegraphics[width=0.8\linewidth]{figures/creeping_flow_past_sphere}
-  \caption{\label{fig:creeping_flow_past_sphere}}
+  \caption{Creeping flow past a shpere: streamlines. \label{fig:creeping_flow_past_sphere}}
 \end{figure}
 
 
@@ -517,8 +517,8 @@ so the definite integral provides a $2/3$ factor. Finally,
 This agrees with our guess of Eq. \ref{eq:drag_sphere_guess}, based on
 dimensional considerations.
 
-However, this drag force is due to pressure only. There will be an
-additiona shear drag, which may be calculated from the shear stress.
+However, this is the only part of the drag force due to pressure. There will be an
+additional shear drag, which may be calculated from the shear stress.
 The relevant component of the tensor is (see \cite{white1991viscous},
 Eq. B17, p. 584):
 \begin{equation}
