--- a/hydrostatics.tex
+++ b/hydrostatics.tex
@@ -148,3 +148,10 @@ approximation is valid, the tropopause,
 $z\approx\SI{17}{\kilo\meter}$, and we find a reduction of about
 $13\%$.
 
+It is noteworthy that for climbers it is the \emph{oxygen} concentration
+which is important. Since the oxygen molecule has a lower molar weight that
+the air, the same calculation yields $L\approx\SI{14.5}{km}$, and a
+O$_2$ concentration at the top of Mt. Everest of $\exp(-8/14.5) \approx 56 \% $
+the value at sea level. This is in rough agreement with the value of $40\%$ that
+is often quoted, the different being probably due to the temperature.
+
