--- a/sound_waves.tex
+++ b/sound_waves.tex
@@ -104,7 +104,7 @@ Our numerical result would then be
 c= \sqrt{\frac{ p_0 }{ \rho_0 }} =
 \sqrt{\frac%
   { \SI{1e3}{\hecto\pascal} }%
-  {\SI{1.2}{\kilo\gram\per\cubed\meter}}} =
+  {\SI{1.2}{\kilo\gram\per\meter\cubed}}} =
 \SI{290}{\meter\per\second} .
 \]
 
@@ -148,7 +148,7 @@ p = \mathrm{ct}_2 \rho^\gamma ,
 \]
 where $\mathrm{ct}_2$ is some other constant, and we introduce
 $m^\gamma$ because the mass of a particle, $m$, is constant (as we
-will ellaborate again later, see e.g. Section \ref{sec:continuity3} .)
+will ellaborate again later, see e.g. Section \ref{sec:continuity3}.)
 By the shortcut of applying logarithms we readily find our $\kappa$:
 \[
 \log p = \mathrm{ct}_3 + \gamma \log \rho  \qquad\implies\qquad
@@ -166,7 +166,7 @@ Finally:
 c= \sqrt{\frac{\gamma p_0 }{ \rho_0 }} =
 \sqrt{\frac%
   { (7/5)  \SI{1e3}{\hecto\pascal} }%
-  {\SI{1.2}{\kilo\gram\per\cubed\meter}}} =
+  {\SI{1.2}{\kilo\gram\per\meter\cubed}}} =
 \SI{330}{\meter\per\second} ,
 \]
 a value much closer to the real value of $\SI{343}{\meter\per\second} $.
@@ -183,7 +183,7 @@ good approximation for small regions far away from the sound source.
 Its mathematical expression is
 \[
 \rho = \rho_0 +  \rho_A \cos[ k ( x  - \omega/k  t) ]
-= \rho_0 \rho_A \cos(k x  - \omega t) .
+= \rho_0 + \rho_A \cos(k x  - \omega t) .
 \]
 It is traveling since, as shown in the first equality, it is a
 function of the form $f(x-ct)$. Also, $c= \omega/k$, which fixes the
@@ -222,7 +222,7 @@ The value of $u_0$ is set by the requirement that $\bfu$ is indeed a
 solution:
 \[
 \omega \rho_A - \rho_0 u_0 k = 0 \qquad\implies\qquad
-u_0 = c \frac{\rho_A}{\rho_0} .
+u_0 = \frac{\rho_A}{\rho_0} c .
 \]
 
 The velocity of the particles is therefore related to the speed of
